# citra

./: CMakeLists.txt  README.md
src/: CMakeLists.txt
src/citra_android/: settings.gradle.kts
src/citra_android/app/: build.gradle.kts
src/citra_android/app/src/androidTest/java/com/antique/citra/: ExampleInstrumentedTest.kt
src/citra_android/app/src/main/: AndroidManifest.xml
src/citra_android/app/src/main/cpp/: CMakeLists.txt  citra.cpp
src/citra_android/app/src/main/java/com/antique/citra/: Common.kt  MainActivity.kt
src/citra_android/app/src/main/java/com/antique/citra/onboarding/: Onboarding.kt  OnboardingCamera.kt  OnboardingMicrophone.kt  OnboardingNotifications.kt  OnboardingStorage.kt
src/citra_android/app/src/main/java/com/antique/citra/ui/theme/: Color.kt  Theme.kt  Type.kt
src/citra_android/app/src/main/res/values/: strings.xml  themes.xml
src/citra_android/app/src/test/java/com/antique/citra/: ExampleUnitTest.kt
src/citra_android/gradle/: libs.versions.toml
src/citra_android/gradle/wrapper/: gradle-wrapper.properties
src/core/hle/service/nwm/: nwm_uds.cpp  nwm_uds.h
